fix overflow issue

--- a/sipspot/src/scss/components/button/_button.scss
+++ b/sipspot/src/scss/components/button/_button.scss
@@ -52,5 +52,5 @@
 .active {
     scale: 1.05;
     background-color: white !important;
-    transform: translateY(-5%);
+    transform: translateY(-25px);
 }
